--- a/twistranet/themes/twistheme/static/js/FCBKcomplete/style.css
+++ b/twistranet/themes/twistheme/static/js/FCBKcomplete/style.css
@@ -1,5 +1,5 @@
 /* TextboxList sample CSS */
-ul.holder { margin: 0; border: 1px solid #999; overflow: hidden; height: auto !important; height: 1%; padding: 4px 5px 0; }
+ul.holder { margin: 0; border: 1px solid #AAA; overflow: hidden; height: auto !important; height: 1%; padding: 4px 5px 0; }
 *:first-child+html ul.holder { padding-bottom: 2px; } * html ul.holder { padding-bottom: 2px; } /* ie7 and below */
 ul.holder li { float: left; list-style-type: none; margin: 0 5px 4px 0; white-space:nowrap;}
 ul.holder li.bit-box, ul.holder li.bit-input input { font: 11px "Lucida Grande", "Verdana"; }
@@ -15,7 +15,6 @@ form ol { font: 11px "Lucida Grande", "Verdana"; margin: 0; padding: 0; }
 form ol li.input-text { margin-bottom: 10px; list-style-type: none; padding-bottom: 10px; }
 form ol li.input-text label { font-weight: bold; cursor: pointer; display: block; font-size: 13px; margin-bottom: 10px; }
 form ol li.input-text input { width: 350px; padding: 5px 5px 6px; font: 11px "Lucida Grande", "Verdana"; border: 1px solid #999; }
-form ul.holder { width: 350px; }
 form ul { margin: 0 !important }
 ul.holder li.bit-box, #apple-list ul.holder li.bit-box { padding-right: 15px; position: relative; z-index:1000;}
 #apple-list ul.holder li.bit-input { margin: 0; }
@@ -28,8 +27,7 @@ ul.holder li.bit-box-focus a.closebutton, ul.holder li.bit-box-focus a.closebutt
 
 /* Autocompleter */
 
-.facebook-auto { display: none; position: absolute; width: 362px; left: 150px; background: #eee; }
-.noleftcol .facebook-auto { left: 198px; }
+.facebook-auto { display: none; position: absolute; width: 100%; left: 0; background: #eee; }
 .facebook-auto .default { padding: 5px 7px; border: 1px solid #ccc; border-width: 0 1px 1px;font-family:"Lucida Grande","Verdana"; font-size:11px; }
 .facebook-auto ul { display: none; margin: 0; padding: 0; overflow: auto; position:absolute; z-index:9999}
 .facebook-auto ul li { padding: 5px 12px; z-index: 1000; cursor: pointer; margin: 0; list-style-type: none; border: 1px solid #ccc; border-width: 0 1px 1px; font: 11px "Lucida Grande", "Verdana"; background-color: #eee }
