--- a/twistranet/themes/twistheme/static/css/typography.css
+++ b/twistranet/themes/twistheme/static/css/typography.css
@@ -119,6 +119,7 @@ input[type="submit"] {
   cursor:pointer;
   float: right;
   margin-left: 5px;
+  margin-bottom: 10px;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
