--- a/twistranet/themes/twistheme/templates/base.html
+++ b/twistranet/themes/twistheme/templates/base.html
@@ -164,5 +164,7 @@
     </div>
     <!-- form protect against unload message -->
     <div id="form-protect-unload-message">{% blocktrans %}Changes have been made on this form, do you really want to quit without saving ?{% endblocktrans %}</div>
+    <!-- write a comment message -->
+    <div id="commentmessage">{% blocktrans %}Write a comment ...{% endblocktrans %}</div>
 </body>
 </html>
