--- a/twistranet/themes/twistheme/static/css/fileuploader.css
+++ b/twistranet/themes/twistheme/static/css/fileuploader.css
@@ -21,11 +21,11 @@
 .qq-upload-button input:hover {cursor: pointer !important;}
 
 .qq-upload-drop-area {
-    position:absolute; top:0; left:0; width:100%; height:100%; min-height: 70px; z-index:2;
+    position:absolute; top:0; left:0; width:100%; height: 48px; z-index:2;
     background: #F5F5F5; text-align:center; border: 1px dotted black;
 }
 .qq-upload-drop-area span {
-    display:block; position:absolute; top: 73%; width:100%; font-size:12px;
+    display:block; position:absolute; top: 35%; width:100%; font-size:12px;
 }
 .qq-upload-drop-area-active {}
 
