--- a/twistranet/themes/twistheme/static/css/ie.css
+++ b/twistranet/themes/twistheme/static/css/ie.css
@@ -1,5 +1,5 @@
 /*----------------------------------------------------------------
-IE7 && IE9 fixes
+IE7 > IE9 fixes
 ---------------------------------------------------------------- */
 
 
@@ -21,4 +21,9 @@ IE7 && IE9 fixes
 
 .comment-form ul.inline-form textarea {
     width: 420px;
+}
+
+#menu-builder .menu-item-handle {
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#E00023', endColorstr='#513D40',GradientType=1 );
+  background: transparent !important;
 }
