--- a/twistranet/twistapp/templates/admin/menu_builder_form.html
+++ b/twistranet/twistapp/templates/admin/menu_builder_form.html
@@ -8,7 +8,7 @@
 {% endblock %}
 {% block content %}
   <div id="menu-builder">
-    <div id"menu-management">
+    <div id="menu-management">
       <div class="nav-tabs-nav">
         <div class="nav-tabs-arrow nav-tabs-arrow-left" style="display: none;"><a>«</a></div>
         <div class="nav-tabs-wrapper">
