--- a/twistranet/twistapp/templates/admin/menu_builder_form.html
+++ b/twistranet/twistapp/templates/admin/menu_builder_form.html
@@ -9,6 +9,7 @@
 {% block content %}
   <div id="menu-builder">
     <div id="menu-management">
+      {% comment%}
       <div class="nav-tabs-nav">
         <div class="nav-tabs-arrow nav-tabs-arrow-left" style="display: none;"><a>«</a></div>
         <div class="nav-tabs-wrapper">
@@ -22,38 +23,63 @@
         </div>
         <div class="nav-tabs-arrow nav-tabs-arrow-right" style="display: none;"><a>»</a></div>
       </div>
-      <form action="{{ path }}" 
-            method="post"
-            class="edit-form enableAutoFocus enableUnloadProtect">
-          <fieldset>
-          <div class="menu_edit_main">
+      {% endcomment%}
+      <div id="menu_edit_left">
+        <div id="add-custom-links" class="postbox ">
+          <h3>{% trans 'Add custom links' %}</h3>
+          <div class="inside">
+            <form>
+              <p>
+                <label>{% trans 'Label' %}</label>
+                <input type="text" name="label" />
+              </p>
+              <p>
+                <label>{% trans 'URL' %}</label>
+                <input type="text" name="URL" />
+              </p>
+              <p>
+                <label>{% trans 'Description' %}</label>
+                <textarea name="Description"></textarea>
+              </p>
+              <p class="postboxcontrol">
+                <input type="submit" name="submit" value="{% trans 'Add to menu' %}" />
+              </p>
+            </form>
+          </div>
+        </div>
+      </div>
+      <div id="menu_edit_main">
+        <form action="{{ path }}" 
+              method="post"
+              class="edit-form enableAutoFocus enableUnloadProtect">
+            <fieldset>
             {% autoescape off %}
               {{ mainmenu }}
             {% endautoescape %}
-          </div>
-
-          {% comment %}
-          I don't know if there will be fields in this form in future ...
-          {% endcomment %}
-          {% for field in form %}
-              {% if not field.is_hidden %}
-                  <div class="fieldWrapper">
-                      {{ field.errors }}
-                      {{ field.label_tag }} {{ field }}
-                      <div class="clear"><!-- --></div>
-                  </div>
-              {% else %}
-                  {{ field }}
-              {% endif %}
-          {% endfor %}
-          {% csrf_token %}
-          <div class="form-controls">
-            <input type="submit" value="{% trans 'Save' %}" /> 
-            <button type="button" class="reset">{% trans 'Undo' %}</button>
-            <input type="hidden" id="referer_url" value="{{referer_url}}" name="referer_url" />
-          </div>
-          </fieldset>
-      </form>
+  
+            {% comment %}
+            I don't know if there will be fields in this form in future ...
+            {% endcomment %}
+            {% for field in form %}
+                {% if not field.is_hidden %}
+                    <div class="fieldWrapper">
+                        {{ field.errors }}
+                        {{ field.label_tag }} {{ field }}
+                        <div class="clear"><!-- --></div>
+                    </div>
+                {% else %}
+                    {{ field }}
+                {% endif %}
+            {% endfor %}
+            {% csrf_token %}
+            <div class="form-controls">
+              <input type="submit" value="{% trans 'Save' %}" /> 
+              <button type="button" class="reset">{% trans 'Undo' %}</button>
+              <input type="hidden" id="referer_url" value="{{referer_url}}" name="referer_url" />
+            </div>
+            </fieldset>
+        </form>
+      </div>
     </div>
   </div>
 {% endblock %}
