--- a/twistranet/themes/twistheme/static/css/tn_menu_builder.css
+++ b/twistranet/themes/twistheme/static/css/tn_menu_builder.css
@@ -45,6 +45,12 @@
   list-style: none outside none;
 }
 
+.menu-item-transport {
+  padding: 0;
+  margin: 0 0 0 -30px;
+  list-style: none outside none;
+}
+
 .menu ul {
   width: 100%;
 }
