--- a/twistranet/twistapp/templates/admin/menu_item_edit.part.html
+++ b/twistranet/twistapp/templates/admin/menu_item_edit.part.html
@@ -9,7 +9,7 @@
       <span class="item-title">{{ ilabel }}</span>
       <span class="item-controls">
         <span class="item-type"></span>
-        <a href="#"
+        <a href="#menu-item-settings-{{ iid }}"
            id="edit-{{ iid }}"
            title="{{ label_edit }}"
            class="item-edit">&nbsp;</a>
