menu_builder in progress : - added tree data for each menuitem - fix parent_id when moving, deleting ...

--- a/twistranet/twistapp/templates/admin/menu_builder_form.html
+++ b/twistranet/twistapp/templates/admin/menu_builder_form.html
@@ -68,10 +68,7 @@
             {% autoescape off %}
               {{ mainmenu }}
             {% endautoescape %}
-  
-            {% comment %}
-            I don't know if there will be fields in this form in future ...
-            {% endcomment %}
+            <input type="hidden" id="menu-id" name="menu-id" value="{{menu.id}}" />
             {% for field in form %}
                 {% if not field.is_hidden %}
                     <div class="fieldWrapper">
