--- a/twistranet/twistapp/templates/admin/menu_item_edit.part.html
+++ b/twistranet/twistapp/templates/admin/menu_item_edit.part.html
@@ -18,22 +18,30 @@
   </dl>
   <div id="menu-item-settings-{{ iid }}"
        class="menu-item-settings">
-    {% for field in edit_form %}
-        {% if not field.is_hidden %}
-            <div class="fieldWrapper">
-                {{ field.errors }}
-                {{ field.label_tag }} {{ field }}
-                {% if field.help_text %}
-                    <span class="hint">{{ field.help_text }}
-                        <span class="hint-pointer">&nbsp;</span>
-                    </span>
-                {% endif %}
-                <div class="clear"><!-- --></div>
-            </div>
-        {% else %}
-            {{ field }}
-        {% endif %}
-    {% endfor %}
+    <div class="ui-data">
+        {% for field in edit_form %}
+            {% if not field.is_hidden %}
+                <div class="fieldWrapper">
+                    {{ field.errors }}
+                    {{ field.label_tag }} {{ field }}
+                    {% if field.help_text %}
+                        <span class="hint">{{ field.help_text }}
+                            <span class="hint-pointer">&nbsp;</span>
+                        </span>
+                    {% endif %}
+                    <div class="clear"><!-- --></div>
+                </div>
+            {% else %}
+                {{ field }}
+            {% endif %}
+        {% endfor %}
+    </div>
+    <input type="hidden" class="menu-item-data-title" name="menu-item-data-title-{{iid}}" value="{{ititle}}" />
+    <input type="hidden" class="menu-item-data-description" name="menu-item-data-description-{{iid}}" value="{{idescription}}" />
+    <input type="hidden" class="menu-item-data-id" name="menu-item-data-id-{{iid}}" value="{{iid}}" />
+    <input type="hidden" class="menu-item-data-parentid" name="menu-item-data-parentid-{{iid}}" value="{{iparentid}}" />
+    <input type="hidden" class="menu-item-data-position" name="menu-item-data-position-{{iid}}" value="{{iposition}}" />
+    <input type="hidden" class="menu-item-data-satus" name="menu-item-data-status-{{iid}}" value="edit" />
     <div class="menu-item-actions">
       <a href="#menu-item-delete-{{ iid }}"
          class="item-delete">{{label_delete_menuitem}}</a>
