menu_builder in progress : - delete process - different forms added - refactorisation for data update during all js events

--- a/twistranet/twistapp/templates/admin/menu_item_edit.part.html
+++ b/twistranet/twistapp/templates/admin/menu_item_edit.part.html
@@ -36,14 +36,20 @@
             {% endif %}
         {% endfor %}
     </div>
-    <input type="hidden" class="menu-item-data-title" name="menu-item-data-title-{{iid}}" value="{{ititle}}" />
-    <input type="hidden" class="menu-item-data-description" name="menu-item-data-description-{{iid}}" value="{{idescription}}" />
-    <input type="hidden" class="menu-item-data-id" name="menu-item-data-id-{{iid}}" value="{{iid}}" />
-    <input type="hidden" class="menu-item-data-parentid" name="menu-item-data-parentid-{{iid}}" value="{{iparentid}}" />
-    <input type="hidden" class="menu-item-data-position" name="menu-item-data-position-{{iid}}" value="{{iposition}}" />
-    <input type="hidden" class="menu-item-data-satus" name="menu-item-data-status-{{iid}}" value="edit" />
+    <div class="final-data">
+      <input type="hidden" class="menu-item-data-title" name="menu-item-data-title-{{iid}}" value="{{ititle}}" />
+      <input type="hidden" class="menu-item-data-description" name="menu-item-data-description-{{iid}}" value="{{idescription}}" />
+      <input type="hidden" class="menu-item-data-id" name="menu-item-data-id-{{iid}}" value="{{iid}}" />
+      <input type="hidden" class="menu-item-data-parent_id" name="menu-item-data-parent_id-{{iid}}" value="{{iparent_id}}" />
+      <input type="hidden" class="menu-item-data-position" name="menu-item-data-position-{{iid}}" value="{{iposition}}" />
+      <input type="hidden" class="menu-item-data-satus" name="menu-item-data-status-{{iid}}" value="edit" />
+      <input type="hidden" class="menu-item-data-link_url" name="menu-item-data-link_url-{{iid}}" value="{{ilink_url}}" />
+      <input type="hidden" class="menu-item-data-target_id" name="menu-item-data-target_id-{{iid}}" value="{{itarget_id}}" />
+      <input type="hidden" class="menu-item-data-view_path" name="menu-item-data-view_path-{{iid}}" value="{{iview_path}}" />
+    </div>
     <div class="menu-item-actions">
       <a href="#menu-item-delete-{{ iid }}"
+         id="delete-{{ iid }}"
          class="item-delete">{{label_delete_menuitem}}</a>
       <a href="#menu-item-cancel-{{ iid }}"
          class="item-cancel">{{label_cancel}}</a>
