--- a/twistranet/twistapp/templates/admin/menu_builder_form.html
+++ b/twistranet/twistapp/templates/admin/menu_builder_form.html
@@ -68,6 +68,8 @@
             {% autoescape off %}
               {{ mainmenu }}
             {% endautoescape %}
+            <ul id="menu-to-delete">
+            </ul>
             <input type="hidden" id="menu-id" name="menu-id" value="{{menu.id}}" />
             {% for field in form %}
                 {% if not field.is_hidden %}
