menu_builder in progress: generic addMenuItem process done (validation, model, etc ...), for all types of items

--- a/twistranet/twistapp/templates/admin/menu_builder_form.html
+++ b/twistranet/twistapp/templates/admin/menu_builder_form.html
@@ -90,6 +90,11 @@
             </div>
             </fieldset>
         </form>
+        <div id="item-model">
+            {% autoescape off %}
+              {{ item_model }}
+            {% endautoescape %}
+        </div>
       </div>
     </div>
   </div>
