--- a/twistranet/themes/twistheme/static/css/tn_menu_builder.css
+++ b/twistranet/themes/twistheme/static/css/tn_menu_builder.css
@@ -206,8 +206,8 @@ body.menu-max-depth-11 { min-width: 1280px !important; }
 .menu-item-settings {
   background: #F9F9F9;
   display:block;
-  width: 350px;
-  padding: 10px 0 10px 10px;
+  width: 360px;
+  padding: 10px 0;
   border: solid #E6E6E6;
   border-width: 0 1px 1px 1px;
   -moz-border-radius: 0 0 6px 6px;
@@ -249,17 +249,20 @@ body.menu-max-depth-11 { min-width: 1280px !important; }
 
 .postbox .inside {
   background-color: white;
-  padding: 5px 7px;
+  padding: 5px 0;
   border-radius: 0 0 6px 6px;
   -moz-border-radius: 0 0 6px 6px;
   -webkit-border-radius: 0 0 6px 6px;
 }
 
 .postbox .inside .fieldWrapper {
-  margin: 0 0 10px !important;
-  padding: 0 !important;
+  margin: 0 !important;
+  padding: 3px 7px  !important;
   border-bottom: none !important;
 }
+
+.postbox .inside .fieldWrapperWithError .small { color: #ddd}
+.menu-item-settings .fieldWrapperWithError .small { display: block; color: #ddd}
 
 .postbox .inside label {
   float: none !important;
@@ -282,7 +285,8 @@ body.menu-max-depth-11 { min-width: 1280px !important; }
 
 .postbox .postboxcontrol {
   text-align: right;
-  margin-top: 15px !important;
+  margin-top: 5px !important;
+  padding: 0 7px;
 }
 
 .postbox .hint {
@@ -294,6 +298,7 @@ body.menu-max-depth-11 { min-width: 1280px !important; }
 
 .menu-item-actions {
   margin-top: 7px;
+  padding-left: 10px;
 }
 
 .item-delete,
@@ -314,6 +319,7 @@ body.menu-max-depth-11 { min-width: 1280px !important; }
   color: #E00023 !important;
 }
 
-#menu-to-delete {
+#menu-to-delete,
+#item-model {
   display: none;
 }
