--- a/twistranet/twistapp/templates/admin/menu_item_edit.part.html
+++ b/twistranet/twistapp/templates/admin/menu_item_edit.part.html
@@ -3,7 +3,7 @@
  Template used to generate tree by menu_builder view
 {% endcomment %}
 <li id="menu-item-{{ iid }}" 
-    class="menu-item menu-item-edit-inactive menu-item-depth-{{ level }}">
+    class="menu-item menu-item-edit-{{ state }} menu-item-depth-{{ level }}">
   <dl class="menu-item-bar">
     <dt class="menu-item-handle">
       <span class="item-title">{{ ilabel }}</span>
@@ -19,6 +19,7 @@
   <div id="menu-item-settings-{{ iid }}"
        class="menu-item-settings">
     <div class="ui-data">
+      {% if edit_form %}
         {% for field in edit_form %}
             {% if not field.is_hidden %}
                 <div class="fieldWrapper">
@@ -35,6 +36,7 @@
                 {{ field }}
             {% endif %}
         {% endfor %}
+      {% endif %}
     </div>
     <div class="final-data">
       <input type="hidden" class="menu-item-data-title" name="menu-item-data-title-{{iid}}" value="{{ititle}}" />
@@ -42,7 +44,7 @@
       <input type="hidden" class="menu-item-data-id" name="menu-item-data-id-{{iid}}" value="{{iid}}" />
       <input type="hidden" class="menu-item-data-parent_id" name="menu-item-data-parent_id-{{iid}}" value="{{iparent_id}}" />
       <input type="hidden" class="menu-item-data-position" name="menu-item-data-position-{{iid}}" value="{{iposition}}" />
-      <input type="hidden" class="menu-item-data-satus" name="menu-item-data-status-{{iid}}" value="edit" />
+      <input type="hidden" class="menu-item-data-satus" name="menu-item-data-status-{{iid}}" value="{{status}}" />
       <input type="hidden" class="menu-item-data-link_url" name="menu-item-data-link_url-{{iid}}" value="{{ilink_url}}" />
       <input type="hidden" class="menu-item-data-target_id" name="menu-item-data-target_id-{{iid}}" value="{{itarget_id}}" />
       <input type="hidden" class="menu-item-data-view_path" name="menu-item-data-view_path-{{iid}}" value="{{iview_path}}" />
