--- a/twistranet/twistapp/templates/admin/menu_builder_form.html
+++ b/twistranet/twistapp/templates/admin/menu_builder_form.html
@@ -26,7 +26,7 @@
       {% endcomment%}
       <div id="menu_edit_left">
         <div id="add-custom-links" class="postbox ">
-          <h3>{% trans 'Add custom link in menu' %}</h3>
+          <h3>{% trans 'Add external link' %}</h3>
           <div class="inside">
             <form action="{{ path }}" 
                   method="post">
@@ -52,10 +52,37 @@
             </form>
           </div>
         </div>
+        <div id="add-view" class="postbox ">
+          <h3>{% trans 'Add internal view' %}</h3>
+          <div class="inside">
+            <form action="{{ path }}"
+                  method="post">
+              {% for field in view_form %}
+                  {% if not field.is_hidden %}
+                      <div class="fieldWrapper">
+                          {{ field.errors }}
+                          {{ field.label_tag }} {{ field }}
+                          {% if field.help_text %}
+                              <span class="hint">{{ field.help_text }}
+                                  <span class="hint-pointer">&nbsp;</span>
+                              </span>
+                          {% endif %}
+                          <div class="clear"><!-- --></div>
+                      </div>
+                  {% else %}
+                      {{ field }}
+                  {% endif %}
+              {% endfor %}
+              <div class="postboxcontrol">
+                <input type="submit" name="submit" value="{% trans 'Add to menu' %}" />
+              </div>
+            </form>
+          </div>
+        </div>
         <div id="add-community" class="postbox ">
           <h3>{% trans 'Add community' %}</h3>
           <div class="inside">
-            
+
           </div>
         </div>
       </div>
@@ -71,17 +98,6 @@
             <ul id="menu-to-delete">
             </ul>
             <input type="hidden" id="menu-id" name="menu-id" value="{{menu.id}}" />
-            {% for field in form %}
-                {% if not field.is_hidden %}
-                    <div class="fieldWrapper">
-                        {{ field.errors }}
-                        {{ field.label_tag }} {{ field }}
-                        <div class="clear"><!-- --></div>
-                    </div>
-                {% else %}
-                    {{ field }}
-                {% endif %}
-            {% endfor %}
             {% csrf_token %}
             <div class="form-controls">
               <input type="submit" value="{% trans 'Save' %}" /> 
