--- a/twistranet/themes/twistheme/static/css/tn_menu_builder.css
+++ b/twistranet/themes/twistheme/static/css/tn_menu_builder.css
@@ -323,3 +323,8 @@ body.menu-max-depth-11 { min-width: 1280px !important; }
 #item-model {
   display: none;
 }
+
+/* XXX TODO (JMG) improve */
+.content-target {
+  padding: 2px  7px;
+}
