--- a/twistranet/twistapp/templates/admin/menu_item_edit.part.html
+++ b/twistranet/twistapp/templates/admin/menu_item_edit.part.html
@@ -40,6 +40,8 @@
     </div>
     <div class="final-data">
       <input type="hidden" class="menu-item-data-title" name="menu-item-data-title-{{iid}}" value="{{ititle}}" />
+      <input type="hidden" class="menu-item-data-label" name="menu-item-data-label-{{iid}}" value="{{ ilabel }}" />
+      <input type="hidden" class="menu-item-data-label_original" name="menu-item-data-label_original-{{iid}}" value="{{ ilabel }}" />
       <input type="hidden" class="menu-item-data-description" name="menu-item-data-description-{{iid}}" value="{{idescription}}" />
       <input type="hidden" class="menu-item-data-id" name="menu-item-data-id-{{iid}}" value="{{iid}}" />
       <input type="hidden" class="menu-item-data-parent_id" name="menu-item-data-parent_id-{{iid}}" value="{{iparent_id}}" />
