--- a/twistranet/themes/twistheme/static/css/tn_menu_builder.css
+++ b/twistranet/themes/twistheme/static/css/tn_menu_builder.css
@@ -320,7 +320,8 @@ body.menu-max-depth-11 { min-width: 1280px !important; }
 }
 
 #menu-to-delete,
-#item-model {
+#item-model,
+#content-item-model-form {
   display: none;
 }
 
