--- a/twistranet/twistapp/templates/admin/menu_item_edit.part.html
+++ b/twistranet/twistapp/templates/admin/menu_item_edit.part.html
@@ -39,18 +39,18 @@
       {% endif %}
     </div>
     <div class="final-data">
+      <input type="hidden" class="menu-item-data-id" name="menu-item-data-id-{{iid}}" value="{{iid}}" />
       <input type="hidden" class="menu-item-data-title" name="menu-item-data-title-{{iid}}" value="{{ititle}}" />
       <input type="hidden" class="menu-item-data-label" name="menu-item-data-label-{{iid}}" value="{{ ilabel }}" />
       <input type="hidden" class="menu-item-data-label_original" name="menu-item-data-label_original-{{iid}}" value="{{ ilabel }}" />
       <input type="hidden" class="menu-item-data-description" name="menu-item-data-description-{{iid}}" value="{{idescription}}" />
-      <input type="hidden" class="menu-item-data-id" name="menu-item-data-id-{{iid}}" value="{{iid}}" />
       <input type="hidden" class="menu-item-data-parent_id" name="menu-item-data-parent_id-{{iid}}" value="{{iparent_id}}" />
       <input type="hidden" class="menu-item-data-position" name="menu-item-data-position-{{iid}}" value="{{iposition}}" />
       <input type="hidden" class="menu-item-data-satus" name="menu-item-data-status-{{iid}}" value="{{status}}" />
       <input type="hidden" class="menu-item-data-link_url" name="menu-item-data-link_url-{{iid}}" value="{{ilink_url}}" />
       <input type="hidden" class="menu-item-data-target_id" name="menu-item-data-target_id-{{iid}}" value="{{itarget_id}}" />
       <input type="hidden" class="menu-item-data-view_path" name="menu-item-data-view_path-{{iid}}" value="{{iview_path}}" />
-      <input type="hidden" class="menu-item-data-type" name="menu-item-data-view_path-{{iid}}" value="{{itype}}" />
+      <input type="hidden" class="menu-item-data-type" name="menu-item-data-type-{{iid}}" value="{{itype}}" />
     </div>
     <div class="menu-item-actions">
       <a href="#menu-item-delete-{{ iid }}"
