the menu builder title

--- a/twistranet/twistapp/templates/admin/menu_builder_form.html
+++ b/twistranet/twistapp/templates/admin/menu_builder_form.html
@@ -10,6 +10,7 @@
   <div id="menu-builder">
     <div id="menu-management">
       {% comment%}
+      <!-- Uncomment in future to work on multiple menus edition -->
       <div class="nav-tabs-nav">
         <div class="nav-tabs-arrow nav-tabs-arrow-left" style="display: none;"><a>«</a></div>
         <div class="nav-tabs-wrapper">
