A proposition for other actions icons (add-comment, view-all-comments, edit) TODO when we will agree about icons : include all icons in the global icons image (icons-normal.png, icons-hover.png), to decrease the number of http queries.

--- a/twistranet/themes/twistheme/static/css/style.css
+++ b/twistranet/themes/twistheme/static/css/style.css
@@ -110,7 +110,10 @@
 
   .postmetadata .i_like,
   .postmetadata .i_unlike,
-  .postmetadata .n_likes       { padding: 2px 0 2px 20px !important;}
+  .postmetadata .n_likes,
+  .postmetadata .edit,
+  .postmetadata .add-comment,
+  .postmetadata .view-all-comments       { padding: 2px 0 2px 20px !important;}
   
   .postmetadata .i_like         { background: url(../images/icons/like_blue_16.png) top left no-repeat; }
   .postmetadata .i_like:hover   { background: url(../images/icons/like_red_16.png) top left no-repeat;}
@@ -120,6 +123,15 @@
 
   .postmetadata .n_likes       { background: url(../images/icons/nlikes_blue_16.png) top left no-repeat; }
   .postmetadata .n_likes:hover { background: url(../images/icons/nlikes_red_16.png) top left no-repeat;}
+
+  .postmetadata .edit          { background: url(../images/icons/edit_blue_16.png) top left no-repeat; }
+  .postmetadata .edit:hover    { background: url(../images/icons/edit_red_16.png) top left no-repeat;}
+
+  .postmetadata .add-comment       { background: url(../images/icons/comment_blue_16.png) top left no-repeat; }
+  .postmetadata .add-comment:hover { background: url(../images/icons/comment_red_16.png) top left no-repeat;}
+
+  .postmetadata .view-all-comments       { background: url(../images/icons/comment_red_16.png) top left no-repeat; }
+  .postmetadata .view-all-comments:hover { background: url(../images/icons/comment_blue_16.png) top left no-repeat;}
 
 #pagenavigator {
   clear: both;
