--- a/twistranet/twistapp/templates/content/summary.file.html
+++ b/twistranet/twistapp/templates/content/summary.file.html
@@ -56,13 +56,12 @@
                     </a>
                 </li>
                 {%if content.can_edit %}
-                    <li class="action">
+                    <li class="edit">
                         <a href="{% url edit_content content.id %}">Edit</a>
                     </li>
                 {%endif%}
-                <li class="action">
-                  {% include 'content/summary.comments.part.html' %}
-                </li>
+                {% include 'content/summary.comments.part.html' %}
+
                 <!-- {{ content.id }} -->
             </ul>
         </div>
